--- a/requirements.txt
+++ b/requirements.txt
@@ -48,4 +48,5 @@ transformers>=4.21.0
 
 # Deployment requirements
 gradio==4.19.2
-python-dotenv==1.0.1 gunicorn==21.2.0
+python-dotenv==1.0.1
+gunicorn==21.2.0
